--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                 </li>
                 <li>
                     <a href="#" id="user" class="circle size-m"></a>
+                    <div class="easter-egg"></div>
+                    <div></div>
                 </li>
             </ul>
         </nav>
@@ -496,9 +498,7 @@
                     <a href="#" class="bottom-link">About</a>
                 </li>
             </ul>
-
         </aside>
-
     </main>
     <!-- Script fontawesome -->
     <script src="https://kit.fontawesome.com/5dbe9b0a5f.js" crossorigin="anonymous"></script>  
