--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="flex jcsb aic">
+    <header class="flex aic jcsb">
         <a href="#">
             <img src="assets/logo.png" alt="logo" class="logo">
         </a>
         <!-- Navbar -->
         <nav class="header-controller">
-            <ul class="flex jcsb aic gap-s">
+            <ul class="flex aic jcsb gap-s">
                 <li>
                     <a href="#" class="icon">
                         <i class="fa-solid fa-magnifying-glass"></i>
@@ -41,8 +41,8 @@
                 </li>
                 <li>
                     <a href="#" id="user" class="circle size-m"></a>
-                    <div class="easter-egg"></div>
-                    <div></div>
+                    <div class="easter"></div>
+                    <div class="egg"></div>
                 </li>
             </ul>
         </nav>
@@ -60,7 +60,7 @@
             </div>
 
             <!-- News container #1 -->
-            <article class="flex aife gap-m">
+            <article class="flex aic gap-m">
                 <div class="flex col gap-xxs">
                     <!-- Author info -->
                     <div class="flex aic gap-xxs">
@@ -98,7 +98,7 @@
             </article>
 
             <!-- News container #2 -->
-            <article class="flex aife gap-m">
+            <article class="flex aic gap-m">
                 <div class="flex col gap-xxs">
                     <!-- Author info -->
                     <div class="flex aic gap-xxs">
@@ -136,7 +136,7 @@
             </article>
 
             <!-- News container #3 -->
-            <article class="flex aife gap-m">
+            <article class="flex aic gap-m">
                 <div class="flex col gap-xxs">
                     <!-- Author info -->
                     <div class="flex aic gap-xxs">
@@ -174,7 +174,7 @@
             </article>
 
             <!-- News container #4 -->
-            <article class="flex aife gap-m">
+            <article class="flex aic gap-m">
                 <div class="flex col gap-xxs">
                     <!-- Author info -->
                     <div class="flex aic gap-xxs">
@@ -212,7 +212,7 @@
             </article>
 
             <!-- News container #5 -->
-            <article class="flex aife gap-m">
+            <article class="flex aic gap-m">
                 <div class="flex col gap-xxs">
                     <!-- Author info -->
                     <div class="flex aic gap-xxs">
@@ -250,7 +250,7 @@
             </article>
 
             <!-- News container #6 -->
-            <article class="flex aife gap-m">
+            <article class="flex aic gap-m">
                 <div class="flex col gap-xxs">
                     <!-- Author info -->
                     <div class="flex aic gap-xxs">
@@ -288,7 +288,7 @@
             </article>
 
             <!-- News container #7 -->
-            <article class="flex aife gap-m">
+            <article class="flex aic gap-m">
                 <div class="flex col gap-xxs">
                     <!-- Author info -->
                     <div class="flex aic gap-xxs">
@@ -326,7 +326,7 @@
             </article>
 
             <!-- News container #8 -->
-            <article class="flex aife gap-m">
+            <article class="flex aic gap-m">
                 <div class="flex col gap-xxs">
                     <!-- Author info -->
                     <div class="flex aic gap-xxs">
