html & css optimization

--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
         </a>
         <!-- Navbar -->
         <nav class="header-controller">
-            <ul class="flex aic jcsb gap-s">
+            <ul class="flex aic jcsb gap-m">
                 <li>
                     <a href="#" class="icon">
                         <i class="fa-solid fa-magnifying-glass"></i>
-                        <i class="fa-solid fa-magnifying-glass-plus" style="display: none;"></i>
+                        <i class="fa-solid fa-magnifying-glass-plus none"></i>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="icon">
                         <i class="fa-regular fa-bookmark"></i>
-                        <i class="fa-solid fa-bookmark" style="display: none;"></i>
+                        <i class="fa-solid fa-bookmark none"></i>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="icon">
                         <i class="fa-regular fa-bell"></i>
-                        <i class="fa-solid fa-bell" style="display: none;"></i>
+                        <i class="fa-solid fa-bell none"></i>
                     </a>
                 </li>
                 <li>
@@ -85,16 +85,16 @@
                                 <span>Popular on Medium</span>
                             </li>
                         </ul>
-                        <div class="flex aic gap-xs">
+                        <div class="flex aic gap-s">
                             <a href="#" class="icon">
                                 <i class="fa-regular fa-bookmark"></i>
-                                <i class="fa-solid fa-bookmark" style="display: none;"></i>
+                                <i class="fa-solid fa-bookmark none"></i>
                             </a>
                             <i class="fa-solid fa-ellipsis"></i>
                         </div>
                     </div>
                 </div>
-                <img src="https://picsum.photos/200" alt="news image" class="news-img" />
+                <img src="https://picsum.photos/200" alt="news image" />
             </article>
 
             <!-- News container #2 -->
@@ -123,16 +123,16 @@
                                 <span>Selected for you</span>
                             </li>
                         </ul>
-                        <div class="flex aic gap-xs">
+                        <div class="flex aic gap-s">
                             <a href="#" class="icon">
                                 <i class="fa-regular fa-bookmark"></i>
-                                <i class="fa-solid fa-bookmark" style="display: none;"></i>
+                                <i class="fa-solid fa-bookmark none"></i>
                             </a>
                             <i class="fa-solid fa-ellipsis"></i>
                         </div>
                     </div>
                 </div>
-                <img src="https://placebeard.it/200x200" alt="news image" class="news-img" />
+                <img src="https://placebeard.it/200x200" alt="news image" />
             </article>
 
             <!-- News container #3 -->
@@ -161,16 +161,16 @@
                                 <span>Popular on Medium</span>
                             </li>
                         </ul>
-                        <div class="flex aic gap-xs">
+                        <div class="flex aic gap-s">
                             <a href="#" class="icon">
                                 <i class="fa-regular fa-bookmark"></i>
-                                <i class="fa-solid fa-bookmark" style="display: none;"></i>
+                                <i class="fa-solid fa-bookmark none"></i>
                             </a>
                             <i class="fa-solid fa-ellipsis"></i>
                         </div>
                     </div>
                 </div>
-                <img src="https://placekitten.com/200/200" alt="news image" class="news-img" />
+                <img src="https://placekitten.com/200/200" alt="news image" />
             </article>
 
             <!-- News container #4 -->
@@ -199,16 +199,16 @@
                                 <span>Selected for you</span>
                             </li>
                         </ul>
-                        <div class="flex aic gap-xs">
+                        <div class="flex aic gap-s">
                             <a href="#" class="icon">
                                 <i class="fa-regular fa-bookmark"></i>
-                                <i class="fa-solid fa-bookmark" style="display: none;"></i>
+                                <i class="fa-solid fa-bookmark none"></i>
                             </a>
                             <i class="fa-solid fa-ellipsis"></i>
                         </div>
                     </div>
                 </div>
-                <img src="https://placebear.com/200/200" alt="news image" class="news-img" />
+                <img src="https://placebear.com/200/200" alt="news image" />
             </article>
 
             <!-- News container #5 -->
@@ -237,16 +237,16 @@
                                 <span>Popular on Medium</span>
                             </li>
                         </ul>
-                        <div class="flex aic gap-xs">
+                        <div class="flex aic gap-s">
                             <a href="#" class="icon">
                                 <i class="fa-regular fa-bookmark"></i>
-                                <i class="fa-solid fa-bookmark" style="display: none;"></i>
+                                <i class="fa-solid fa-bookmark none"></i>
                             </a>
                             <i class="fa-solid fa-ellipsis"></i>
                         </div>
                     </div>
                 </div>
-                <img src="https://picsum.photos/200" alt="news image" class="news-img" />
+                <img src="https://picsum.photos/200" alt="news image" />
             </article>
 
             <!-- News container #6 -->
@@ -275,16 +275,16 @@
                                 <span>Selected for you</span>
                             </li>
                         </ul>
-                        <div class="flex aic gap-xs">
+                        <div class="flex aic gap-s">
                             <a href="#" class="icon">
                                 <i class="fa-regular fa-bookmark"></i>
-                                <i class="fa-solid fa-bookmark" style="display: none;"></i>
+                                <i class="fa-solid fa-bookmark none"></i>
                             </a>
                             <i class="fa-solid fa-ellipsis"></i>
                         </div>
                     </div>
                 </div>
-                <img src="https://placebeard.it/200x200" alt="news image" class="news-img" />
+                <img src="https://placebeard.it/200x200" alt="news image" />
             </article>
 
             <!-- News container #7 -->
@@ -313,16 +313,16 @@
                                 <span>Popular on Medium</span>
                             </li>
                         </ul>
-                        <div class="flex aic gap-xs">
+                        <div class="flex aic gap-s">
                             <a href="#" class="icon">
                                 <i class="fa-regular fa-bookmark"></i>
-                                <i class="fa-solid fa-bookmark" style="display: none;"></i>
+                                <i class="fa-solid fa-bookmark none"></i>
                             </a>
                             <i class="fa-solid fa-ellipsis"></i>
                         </div>
                     </div>
                 </div>
-                <img src="https://placekitten.com/200/200" alt="news image" class="news-img" />
+                <img src="https://placekitten.com/200/200" alt="news image" />
             </article>
 
             <!-- News container #8 -->
@@ -351,16 +351,16 @@
                                 <span>Selected for you</span>
                             </li>
                         </ul>
-                        <div class="flex aic gap-xs">
+                        <div class="flex aic gap-s">
                             <a href="#" class="icon">
                                 <i class="fa-regular fa-bookmark"></i>
-                                <i class="fa-solid fa-bookmark" style="display: none;"></i>
+                                <i class="fa-solid fa-bookmark none"></i>
                             </a>
                             <i class="fa-solid fa-ellipsis"></i>
                         </div>
                     </div>
                 </div>
-                <img src="https://placebear.com/200/200" alt="news image" class="news-img" />
+                <img src="https://placebear.com/200/200" alt="news image" />
             </article>
             
         </section>
@@ -372,8 +372,8 @@
             <div class="brand flex col aic gap-s">
                 <img src="assets/logo.png" alt="logo" class="logo">
                 <p>Discover Medium writers you already follow on Twitter</p>
-                <a href="#" class="button twitter"><i class="fa-brands fa-twitter"></i>  Connect to twitter</a>
-                <a href="#" class="bottom-link">Maybe later</a>
+                <a href="#" class="button"><i class="fa-brands fa-twitter"></i>  Connect to twitter</a>
+                <a href="#" class="brand-link bottom-link">Maybe later</a>
             </div>
 
             <div class="divider"></div>
@@ -402,8 +402,8 @@
                 <div class="flex aic jcsb">
                     <div class="flex aic gap-xs">
                         <img src="assets/user-img-1.png" alt="profile picture" class="circle size-m">
-                        <div class="follower-info">
-                            <strong>Margaret Sullivan</strong>
+                        <div>
+                            <h3>Margaret Sullivan</h3>
                             <span>Senior web developer</span>
                         </div>
                     </div>
@@ -413,8 +413,8 @@
                 <div class="flex aic jcsb">
                     <div class="flex aic gap-xs">
                         <img src="assets/user-img-2.png" alt="profile picture" class="circle size-m">
-                        <div class="follower-info">
-                            <strong>John Percival Smith</strong>
+                        <div>
+                            <h3>John Percival Smith</h3>
                             <span>Law professor, activist</span>
                         </div>
                     </div>
@@ -434,7 +434,7 @@
                         <img src="assets/user-img-4.png" alt="profile picture" class="circle size-s">
                         <span>Elisabeth Gardner</span>
                     </div>
-                    <h3 class="news-title">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3>Lorem ipsum dolor sit amet consectetur.</h3>
                     <!-- News details -->
                     <ul class="news-details flex aic gap-xxs">
                         <li>
@@ -453,7 +453,7 @@
                         <img src="assets/user-img-3.png" alt="profile picture" class="circle size-s">
                         <span>Micheal Jackson</span>
                     </div>
-                    <h3 class="news-title">Lorem ipsum dolor sit amet.</h3>
+                    <h3>Lorem ipsum dolor sit amet.</h3>
                     <!-- News details -->
                     <ul class="news-details flex aic gap-xxs">
                         <li>
