html & css optimization

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="assets/logo.png" alt="logo" class="logo">
         </a>
         <!-- Navbar -->
-        <nav class="header-controller">
+        <nav>
             <ul class="flex aic jcsb gap-m">
                 <li>
                     <a href="#" class="icon">
@@ -55,8 +55,8 @@
 
             <!-- Tabs -->
             <div class="tabs flex">
-                <a href="#" class="news-link active">Following</a>
-                <a href="#" class="news-link">Recommended for you</a>
+                <a href="#" class="active">Following</a>
+                <a href="#">Recommended for you</a>
             </div>
 
             <!-- News container #1 -->
@@ -67,6 +67,7 @@
                         <img src="assets/user-img-1.png" alt="profile picture" class="circle size-s">
                         <span>Margaret Sullivan</span>
                     </div>
+                    <!-- News contents -->
                     <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto blanditiis atque necessitatibus, laudantium quam, laboriosam repellendus eligendi nostrum molestiae vitae temporibus? Recusandae accusantium facere iure nemo? Libero impedit ipsa unde.</p>
                     <!-- News details -->
@@ -105,6 +106,7 @@
                         <img src="assets/user-img-2.png" alt="profile picture" class="circle size-s">
                         <span>John Percival Smith</span>
                     </div>
+                    <!-- News contents -->
                     <h2>Lorem ipsum dolor sit amet consectetur.</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto blanditiis atque necessitatibus, laudantium quam, laboriosam repellendus eligendi dolor sit amet consectetur adipisicing elit nostrum molestiae vitae temporibus? Recusandae accusantium facere iure.</p>
                     <!-- News details -->
@@ -143,6 +145,7 @@
                         <img src="assets/user-img-3.png" alt="profile picture" class="circle size-s">
                         <span>Micheal Jackson</span>
                     </div>
+                    <!-- News contents -->
                     <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto blanditiis atque necessitatibus, laudantium quam, laboriosam repellendus eligendi nostrum molestiae vitae temporibus? Recusandae accusantium facere iure nemo? Libero impedit ipsa unde.</p>
                     <!-- News details -->
@@ -181,6 +184,7 @@
                         <img src="assets/user-img-4.png" alt="profile picture" class="circle size-s">
                         <span>Elisabeth Gardner</span>
                     </div>
+                    <!-- News contents -->
                     <h2>Lorem ipsum dolor sit amet consectetur.</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto blanditiis atque necessitatibus, laudantium quam, laboriosam repellendus eligendi nostrum molestiae vitae temporibus? Recusandae accusantium facere iure nemo laudantium quam, laboriosam repellendus.</p>
                     <!-- News details -->
@@ -219,6 +223,7 @@
                         <img src="assets/user-img-1.png" alt="profile picture" class="circle size-s">
                         <span>Margaret Sullivan</span>
                     </div>
+                    <!-- News contents -->
                     <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto blanditiis atque necessitatibus, laudantium quam, laboriosam repellendus eligendi nostrum molestiae vitae temporibus? Recusandae accusantium facere iure nemo? Libero impedit ipsa unde.</p>
                     <!-- News details -->
@@ -257,6 +262,7 @@
                         <img src="assets/user-img-2.png" alt="profile picture" class="circle size-s">
                         <span>John Percival Smith</span>
                     </div>
+                    <!-- News contents -->
                     <h2>Lorem ipsum dolor sit amet consectetur.</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto blanditiis atque necessitatibus, laudantium quam, laboriosam repellendus eligendi dolor sit amet consectetur adipisicing elit nostrum molestiae vitae temporibus? Recusandae accusantium facere iure.</p>
                     <!-- News details -->
@@ -295,6 +301,7 @@
                         <img src="assets/user-img-3.png" alt="profile picture" class="circle size-s">
                         <span>Micheal Jackson</span>
                     </div>
+                    <!-- News contents -->
                     <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto blanditiis atque necessitatibus, laudantium quam, laboriosam repellendus eligendi nostrum molestiae vitae temporibus? Recusandae accusantium facere iure nemo? Libero impedit ipsa unde.</p>
                     <!-- News details -->
@@ -333,6 +340,7 @@
                         <img src="assets/user-img-4.png" alt="profile picture" class="circle size-s">
                         <span>Elisabeth Gardner</span>
                     </div>
+                    <!-- News contents -->
                     <h2>Lorem ipsum dolor sit amet consectetur.</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto blanditiis atque necessitatibus, laudantium quam, laboriosam repellendus eligendi nostrum molestiae vitae temporibus? Recusandae accusantium facere iure nemo laudantium quam, laboriosam repellendus.</p>
                     <!-- News details -->
