html & css optimization

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
             <div class="flex col gap-s">
                 <h4>Recently saved</h4>
                 <!-- Saved news container #1 -->
-                <div class="flex col gap-3xs">
+                <article class="flex col gap-3xs">
                     <!-- Author info -->
                     <div class="flex aic gap-xxs">
                         <img src="assets/user-img-4.png" alt="profile picture" class="circle size-s">
@@ -453,9 +453,9 @@
                         </li>
                         <i class="fa-solid fa-star"></i>
                     </ul>
-                </div>
+                </article>
                 <!-- Saved news container #2 -->
-                <div class="flex col gap-3xs">
+                <article class="flex col gap-3xs">
                     <!-- Author info -->
                     <div class="flex aic gap-xxs">
                         <img src="assets/user-img-3.png" alt="profile picture" class="circle size-s">
@@ -472,7 +472,7 @@
                         </li>
                         <i class="fa-solid fa-star"></i>
                     </ul>
-                </div>
+                </article>
                 <a href="#" class="link">See all (6)</a>
             </div>
 
