html & css optimization

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             </div>
 
             <!-- News container #1 -->
-            <article class="flex aic gap-m">
-                <div class="flex col gap-xxs">
+            <article class="flex aic jcsb gap-m">
+                <div class="flex col fbfull gap-xxs">
                     <!-- Author info -->
                     <div class="flex aic gap-xxs">
                         <img src="assets/user-img-1.png" alt="profile picture" class="circle size-s">
@@ -99,8 +99,8 @@
             </article>
 
             <!-- News container #2 -->
-            <article class="flex aic gap-m">
-                <div class="flex col gap-xxs">
+            <article class="flex aic jcsb gap-m">
+                <div class="flex col fbfull gap-xxs">
                     <!-- Author info -->
                     <div class="flex aic gap-xxs">
                         <img src="assets/user-img-2.png" alt="profile picture" class="circle size-s">
@@ -138,8 +138,8 @@
             </article>
 
             <!-- News container #3 -->
-            <article class="flex aic gap-m">
-                <div class="flex col gap-xxs">
+            <article class="flex aic jcsb gap-m">
+                <div class="flex col fbfull gap-xxs">
                     <!-- Author info -->
                     <div class="flex aic gap-xxs">
                         <img src="assets/user-img-3.png" alt="profile picture" class="circle size-s">
@@ -177,8 +177,8 @@
             </article>
 
             <!-- News container #4 -->
-            <article class="flex aic gap-m">
-                <div class="flex col gap-xxs">
+            <article class="flex aic jcsb gap-m">
+                <div class="flex col fbfull gap-xxs">
                     <!-- Author info -->
                     <div class="flex aic gap-xxs">
                         <img src="assets/user-img-4.png" alt="profile picture" class="circle size-s">
@@ -216,8 +216,8 @@
             </article>
 
             <!-- News container #5 -->
-            <article class="flex aic gap-m">
-                <div class="flex col gap-xxs">
+            <article class="flex aic jcsb gap-m">
+                <div class="flex col fbfull gap-xxs">
                     <!-- Author info -->
                     <div class="flex aic gap-xxs">
                         <img src="assets/user-img-1.png" alt="profile picture" class="circle size-s">
@@ -255,8 +255,8 @@
             </article>
 
             <!-- News container #6 -->
-            <article class="flex aic gap-m">
-                <div class="flex col gap-xxs">
+            <article class="flex aic jcsb gap-m">
+                <div class="flex col fbfull gap-xxs">
                     <!-- Author info -->
                     <div class="flex aic gap-xxs">
                         <img src="assets/user-img-2.png" alt="profile picture" class="circle size-s">
@@ -294,16 +294,16 @@
             </article>
 
             <!-- News container #7 -->
-            <article class="flex aic gap-m">
-                <div class="flex col gap-xxs">
+            <article class="flex aic jcsb gap-m">
+                <div class="flex col fbfull gap-xxs">
                     <!-- Author info -->
                     <div class="flex aic gap-xxs">
                         <img src="assets/user-img-3.png" alt="profile picture" class="circle size-s">
                         <span>Micheal Jackson</span>
                     </div>
                     <!-- News contents -->
-                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto blanditiis atque necessitatibus, laudantium quam, laboriosam repellendus eligendi nostrum molestiae vitae temporibus? Recusandae accusantium facere iure nemo? Libero impedit ipsa unde.</p>
+                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing impedit ipsa unde.</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto blanditiis atque necessitatibus, laudantium quam, laboriosam repellendus eligendi nostrum molestiae vitae temporibus.</p>
                     <!-- News details -->
                     <div class="flex aic jcsb">
                         <ul class="news-details flex aic gap-xxs">
@@ -333,8 +333,8 @@
             </article>
 
             <!-- News container #8 -->
-            <article class="flex aic gap-m">
-                <div class="flex col gap-xxs">
+            <article class="flex aic jcsb gap-m">
+                <div class="flex col fbfull gap-xxs">
                     <!-- Author info -->
                     <div class="flex aic gap-xxs">
                         <img src="assets/user-img-4.png" alt="profile picture" class="circle size-s">
@@ -342,7 +342,7 @@
                     </div>
                     <!-- News contents -->
                     <h2>Lorem ipsum dolor sit amet consectetur.</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto blanditiis atque necessitatibus, laudantium quam, laboriosam repellendus eligendi nostrum molestiae vitae temporibus? Recusandae accusantium facere iure nemo laudantium quam, laboriosam repellendus.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <!-- News details -->
                     <div class="flex aic jcsb">
                         <ul class="news-details flex aic gap-xxs">
@@ -350,7 +350,7 @@
                                 <span>May 21</span>
                             </li>
                             <li>
-                                <span>7 min read</span>
+                                <span>2 min read</span>
                             </li>
                             <li>
                                 <span class="badge size-s">Web development</span>
@@ -378,7 +378,13 @@
 
             <!-- Brand section -->
             <div class="brand flex col aic gap-s">
-                <img src="assets/logo.png" alt="logo" class="logo">
+                <div class="flex aic gap-xxs">
+                    <i class="fa-brands fa-medium brand-icon"></i>
+                    <span>
+                        <i class="fa-solid fa-plus"></i>
+                    </span>
+                    <i class="fa-brands fa-twitter brand-icon"></i>
+                </div>
                 <p>Discover Medium writers you already follow on Twitter</p>
                 <a href="#" class="button"><i class="fa-brands fa-twitter"></i>  Connect to twitter</a>
                 <a href="#" class="brand-link bottom-link">Maybe later</a>
